--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "chris/api",
+    "name": "coffeedev/api",
     "description": "RESPONSE API",
     "type": "library",
     "license": "MIT",
@@ -11,7 +11,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "chris\\api\\": "src/"
+            "coffeedev\\api\\": "src/"
         }
     },
     "minimum-stability": "stable",
